--- a/story.html
+++ b/story.html
@@ -47,7 +47,7 @@
 
             <div></div>
             <div></div>
-            <div class="StupidRectangle">Stupid Rectangle</div>
+            <div class="StupidRectangle">SR</div>
             <div></div>
             <div></div>
 
