--- a/story.html
+++ b/story.html
@@ -43,50 +43,56 @@
 
         <div class="ContentHeader">Key Milestones of Ulu Pandan Stars's Journey</div>
 
-        <div class="TimelineFrame">
-
-            <div></div>
-            <div></div>
-            <div class="StupidRectangle">SR</div>
-            <div></div>
-            <div></div>
-
+        <div class="TimelineFrame" style="margin-top: 2rem">
             <img class="TimelineImage" src="./assets/a_community_bringing_opportunities.webp">
             <div>
                 <div class="TimelineHeader">2015</div>
                 <div class="TimelineContent">UPStars was founded as a joint initiative between Ulu Pandan PAP Community Foundation (PCF) and Ulu Pandan Citizen Consultative Committee’s (CCC) – Community Development & Welfare Fund Subcommittee (CDWF)</div>
             </div>
-            <div class="TimelineNode">●</div>
+            <div class="TimelineNode">
+                <text class="TimelineNodeDot">●</text>
+            </div>
             <div></div>
             <div></div>
+        </div>
 
+        <div class="TimelineFrame">
             <div></div>
             <div></div>
-            <div class="TimelineNode">●</div>
-            <img class="TimelineImage" src="./assets/a_community_bringing_opportunities.webp">
+            <div class="TimelineNode">
+                <text class="TimelineNodeDot">●</text>
+            </div>
             <div>
                 <div class="TimelineHeader left">2016</div>
                 <div class="TimelineContent left">UPStars was founded as a joint initiative between Ulu Pandan PAP Community Foundation (PCF) and Ulu Pandan Citizen Consultative Committee’s (CCC) – Community Development & Welfare Fund Subcommittee (CDWF)</div>
             </div>
+            <img class="TimelineImage" src="./assets/a_community_bringing_opportunities.webp">
+        </div>
             
+        <div class="TimelineFrame">
             <img class="TimelineImage" src="./assets/a_community_bringing_opportunities.webp">
             <div>
                 <div class="TimelineHeader">2017</div>
                 <div class="TimelineContent">UPStars was founded as a joint initiative between Ulu Pandan PAP Community Foundation (PCF) and Ulu Pandan Citizen Consultative Committee’s (CCC) – Community Development & Welfare Fund Subcommittee (CDWF)</div>
             </div>
-            <div class="TimelineNode">●</div>
+            <div class="TimelineNode">
+                <text class="TimelineNodeDot">●</text>
+            </div>
             <div></div>
             <div></div>
+        </div>
 
+        <div class="TimelineFrame">
             <div></div>
             <div></div>
-            <div class="TimelineNode">●</div>
-            <img class="TimelineImage" src="./assets/a_community_bringing_opportunities.webp">
+            <div class="TimelineNode">
+                <text class="TimelineNodeDot">●</text>
+            </div>
             <div>
                 <div class="TimelineHeader left">2018</div>
                 <div class="TimelineContent left">UPStars was founded as a joint initiative between Ulu Pandan PAP Community Foundation (PCF) and Ulu Pandan Citizen Consultative Committee’s (CCC) – Community Development & Welfare Fund Subcommittee (CDWF)</div>
             </div>
-            
+            <img class="TimelineImage" src="./assets/a_community_bringing_opportunities.webp">
         </div>
 
         <div class="ContentHeader" style="margin-top: 3rem; padding-top: 10rem; background-color: white;">Our Star Stories</div>
