--- a/story.html
+++ b/story.html
@@ -50,7 +50,7 @@
                 <div class="TimelineContent">UPStars was founded as a joint initiative between Ulu Pandan PAP Community Foundation (PCF) and Ulu Pandan Citizen Consultative Committee’s (CCC) – Community Development & Welfare Fund Subcommittee (CDWF)</div>
             </div>
             <div class="TimelineNode">
-                <text class="TimelineNodeDot">●</text>
+                <img src='assets/TimelineNode.png' class="TimelineNodeDot">
             </div>
             <div></div>
             <div></div>
@@ -60,7 +60,7 @@
             <div></div>
             <div></div>
             <div class="TimelineNode">
-                <text class="TimelineNodeDot">●</text>
+                <img src='assets/TimelineNode.png' class="TimelineNodeDot">
             </div>
             <div>
                 <div class="TimelineHeader left">2016</div>
@@ -76,7 +76,7 @@
                 <div class="TimelineContent">UPStars was founded as a joint initiative between Ulu Pandan PAP Community Foundation (PCF) and Ulu Pandan Citizen Consultative Committee’s (CCC) – Community Development & Welfare Fund Subcommittee (CDWF)</div>
             </div>
             <div class="TimelineNode">
-                <text class="TimelineNodeDot">●</text>
+                <img src='assets/TimelineNode.png' class="TimelineNodeDot">
             </div>
             <div></div>
             <div></div>
@@ -86,7 +86,7 @@
             <div></div>
             <div></div>
             <div class="TimelineNode">
-                <text class="TimelineNodeDot">●</text>
+                <img src='assets/TimelineNode.png' class="TimelineNodeDot">
             </div>
             <div>
                 <div class="TimelineHeader left">2018</div>
