--- a/programmes.html
+++ b/programmes.html
@@ -7,12 +7,8 @@
         <link rel="stylesheet" href="./01 Generic.css">
         <link rel="stylesheet" href="./02 NavBar.css">
         <link rel="stylesheet" href="./03 HeroBanner.css">
-        <link rel="stylesheet" href="./04 Persona.css">
-        <link rel="stylesheet" href="./05 CTA.css">
-        <link rel="stylesheet" href="./06 Overview.css">
         <link rel="stylesheet" href="./07 Content.css">
-        <link rel="stylesheet" href="./08 Timeline.css">
-        <link rel="stylesheet" href="./09 Star Stories.css">
+        <link rel="stylesheet" href="./11 Programmes.css">
         <script src="javascript.js"></script>
     </head>
 
@@ -42,3 +38,70 @@
         </div>
 
         <div class="ContentHeader">Customer Testimonials</div>
+
+        <div class="TestimonialFrame">
+            <img class="TestimonialImage" src="./assets/guy_looking_to_the_side.jpg">
+            <div class="TestimonialText">
+                <div class="TestimonialHeader">Commitment to Excellence, Perfection in Instruction</div>
+                <br>
+                <div class="TestimonialContent">(AI-generated content placeholder content) “UPStars's commitment to providing guidance, care, and resources enables families and communities to keep young people in school and out of trouble. With a focus on mentorship and academic support, UPStars truly makes a positive impact on the lives of those they serve.”</div>
+                <br>
+                <div class="TestimonialCredit">– Timmy Tan</div>
+                <div class="TestimonialCredit">&nbsp&nbsp&nbspEx-student of Ulu Pandan Stars</div>
+            </div>
+        </div>
+
+        <div class="ProgrammeFrame">
+            <img class="ProgrammeImage" src="./assets/ic_fluent_book_letter_24_filled.png">
+            <div class="ProgrammeText">
+                <div class="ProgrammeHeader">Reading</div>
+                <br>
+                <div class="ProgrammeContent">(AI-generated content placeholder content) “Is your child struggling with reading? Our tailored tuition service is here to ignite their passion for words. With engaging lessons, personalized attention, and proven techniques, we’ll transform hesitant readers into confident bookworms. Enroll today and watch their world expand, one page at a time!”</div>
+                <br>
+                <div class="ProgrammeButton">Enroll here</div>
+            </div>
+        </div>
+
+        <div class="ProgrammeFrame">
+            <img class="ProgrammeImage" src="./assets/ic_fluent_translate_24_filled.png">
+            <div class="ProgrammeText">
+                <div class="ProgrammeHeader">Language</div>
+                <br>
+                <div class="ProgrammeContent">(AI-generated content placeholder content) “Is your child struggling with reading? Our tailored tuition service is here to ignite their passion for words. With engaging lessons, personalized attention, and proven techniques, we’ll transform hesitant readers into confident bookworms. Enroll today and watch their world expand, one page at a time!”</div>
+                <br>
+                <div class="ProgrammeButton">Enroll here</div>
+            </div>
+        </div>
+
+        <div class="ProgrammeFrame">
+            <img class="ProgrammeImage" src="./assets/ic_fluent_math_formula_24_filled.png">
+            <div class="ProgrammeText">
+                <div class="ProgrammeHeader">Mathematics</div>
+                <br>
+                <div class="ProgrammeContent">(AI-generated content placeholder content) “Is your child struggling with reading? Our tailored tuition service is here to ignite their passion for words. With engaging lessons, personalized attention, and proven techniques, we’ll transform hesitant readers into confident bookworms. Enroll today and watch their world expand, one page at a time!”</div>
+                <br>
+                <div class="ProgrammeButton">Enroll here</div>
+            </div>
+        </div>
+
+        <div class="ProgrammeFrame">
+            <img class="ProgrammeImage" src="./assets/ic_fluent_microscope_24_filled.png">
+            <div class="ProgrammeText">
+                <div class="ProgrammeHeader">Science</div>
+                <br>
+                <div class="ProgrammeContent">(AI-generated content placeholder content) “Is your child struggling with reading? Our tailored tuition service is here to ignite their passion for words. With engaging lessons, personalized attention, and proven techniques, we’ll transform hesitant readers into confident bookworms. Enroll today and watch their world expand, one page at a time!”</div>
+                <br>
+                <div class="ProgrammeButton">Enroll here</div>
+            </div>
+        </div>
+
+        <div class="ProgrammeFrame">
+            <img class="ProgrammeImage" src="./assets/ic_fluent_building_retail_money_24_filled.png">
+            <div class="ProgrammeText">
+                <div class="ProgrammeHeader">Economics</div>
+                <br>
+                <div class="ProgrammeContent">(AI-generated content placeholder content) “Is your child struggling with reading? Our tailored tuition service is here to ignite their passion for words. With engaging lessons, personalized attention, and proven techniques, we’ll transform hesitant readers into confident bookworms. Enroll today and watch their world expand, one page at a time!”</div>
+                <br>
+                <div class="ProgrammeButton">Enroll here</div>
+            </div>
+        </div>
