--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         </div>
 
         <div class="HamburgerMenu">
-            <div class="NavButton HamOpt">Home</div><br>
-            <div class="NavButton HamOpt">Our Story</div><br>
-            <div class="NavButton HamOpt">Our Programmes</div><br>
-            <div class="NavButton HamOpt">Volunteer with Us</div><br>
-            <div class="NavButton HamOpt">Sign Up</div>
+            <div class="NavButton HamOpt" onclick="location.href='./index.html'">Home</div><br>
+            <div class="NavButton HamOpt" onclick="location.href='./story.html'">Our Story</div><br>
+            <div class="NavButton HamOpt" onclick="location.href='./programmes.html'">Our Programmes</div><br>
+            <div class="NavButton HamOpt" onclick="location.href='./volunteer.html'">Volunteer with Us</div><br>
+            <div class="NavButton HamOpt" onclick="location.href='./signup.html'">Sign Up</div>
         </div>
 
         <div class="HeroFrame">
