--- a/story.html
+++ b/story.html
@@ -7,9 +7,6 @@
         <link rel="stylesheet" href="./01 Generic.css">
         <link rel="stylesheet" href="./02 NavBar.css">
         <link rel="stylesheet" href="./03 HeroBanner.css">
-        <link rel="stylesheet" href="./04 Persona.css">
-        <link rel="stylesheet" href="./05 CTA.css">
-        <link rel="stylesheet" href="./06 Overview.css">
         <link rel="stylesheet" href="./07 Content.css">
         <link rel="stylesheet" href="./08 Timeline.css">
         <link rel="stylesheet" href="./09 Star Stories.css">
@@ -28,11 +25,11 @@
         </div>
 
         <div class="HamburgerMenu">
-            <div class="NavButton HamOpt">Home</div><br>
-            <div class="NavButton HamOpt">Our Story</div><br>
-            <div class="NavButton HamOpt">Our Programmes</div><br>
-            <div class="NavButton HamOpt">Volunteer with Us</div><br>
-            <div class="NavButton HamOpt">Sign Up</div>
+            <div class="NavButton HamOpt" onclick="location.href='./index.html'">Home</div><br>
+            <div class="NavButton HamOpt" onclick="location.href='./story.html'">Our Story</div><br>
+            <div class="NavButton HamOpt" onclick="location.href='./programmes.html'">Our Programmes</div><br>
+            <div class="NavButton HamOpt" onclick="location.href='./volunteer.html'">Volunteer with Us</div><br>
+            <div class="NavButton HamOpt" onclick="location.href='./signup.html'">Sign Up</div>
         </div>
 
         <div class="HeroFrame">
@@ -107,7 +104,7 @@
                     <br>
                     <div class="StarStoriesContent">After working with UPStars for nearly 3 years, Ken has not just taught many lessons, but learnt many too. How did he find the passion for his work?</div>
                     <br>
-                    <div class="StarStoriesEnterButton">Read Ken's Story</div>
+                    <div class="StarStoriesEnterButton" onclick="location.href='./star_story.html'">Read Ken's Story</div>
                 </div>
             </div>
             <div class="StarStoriesButton">></div>
