--- a/story.html
+++ b/story.html
@@ -40,56 +40,81 @@
 
         <div class="ContentHeader">Key Milestones of Ulu Pandan Stars's Journey</div>
 
-        <div class="TimelineFrame" style="margin-top: 2rem">
-            <img class="TimelineImage" src="./assets/a_community_bringing_opportunities.webp">
-            <div>
-                <div class="TimelineHeader">2015</div>
-                <div class="TimelineContent">UPStars was founded as a joint initiative between Ulu Pandan PAP Community Foundation (PCF) and Ulu Pandan Citizen Consultative Committee’s (CCC) – Community Development & Welfare Fund Subcommittee (CDWF)</div>
+        <div class="TimelineDesktop">
+            <div class="TimelineFrame" style="margin-top: 2rem">
+                <img class="TimelineImage" src="./assets/a_community_bringing_opportunities.webp">
+                <div>
+                    <div class="TimelineHeader">2015</div>
+                    <div class="TimelineContent">UPStars was founded as a joint initiative between Ulu Pandan PAP Community Foundation (PCF) and Ulu Pandan Citizen Consultative Committee’s (CCC) – Community Development & Welfare Fund Subcommittee (CDWF)</div>
+                </div>
+                <div class="TimelineNode">
+                    <img src='assets/TimelineNode.png' class="TimelineNodeDot">
+                </div>
+                <div></div>
+                <div></div>
             </div>
-            <div class="TimelineNode">
-                <img src='assets/TimelineNode.png' class="TimelineNodeDot">
+
+            <div class="TimelineFrame">
+                <div></div>
+                <div></div>
+                <div class="TimelineNode">
+                    <img src='assets/TimelineNode.png' class="TimelineNodeDot">
+                </div>
+                <div>
+                    <div class="TimelineHeader left">2016</div>
+                    <div class="TimelineContent left">UPStars was founded as a joint initiative between Ulu Pandan PAP Community Foundation (PCF) and Ulu Pandan Citizen Consultative Committee’s (CCC) – Community Development & Welfare Fund Subcommittee (CDWF)</div>
+                </div>
+                <img class="TimelineImage" src="./assets/a_community_bringing_opportunities.webp">
             </div>
-            <div></div>
-            <div></div>
+                
+            <div class="TimelineFrame">
+                <img class="TimelineImage" src="./assets/a_community_bringing_opportunities.webp">
+                <div>
+                    <div class="TimelineHeader">2017</div>
+                    <div class="TimelineContent">UPStars was founded as a joint initiative between Ulu Pandan PAP Community Foundation (PCF) and Ulu Pandan Citizen Consultative Committee’s (CCC) – Community Development & Welfare Fund Subcommittee (CDWF)</div>
+                </div>
+                <div class="TimelineNode">
+                    <img src='assets/TimelineNode.png' class="TimelineNodeDot">
+                </div>
+                <div></div>
+                <div></div>
+            </div>
+
+            <div class="TimelineFrame">
+                <div></div>
+                <div></div>
+                <div class="TimelineNode">
+                    <img src='assets/TimelineNode.png' class="TimelineNodeDot">
+                </div>
+                <div>
+                    <div class="TimelineHeader left">2018</div>
+                    <div class="TimelineContent left">UPStars was founded as a joint initiative between Ulu Pandan PAP Community Foundation (PCF) and Ulu Pandan Citizen Consultative Committee’s (CCC) – Community Development & Welfare Fund Subcommittee (CDWF)</div>
+                </div>
+                <img class="TimelineImage" src="./assets/a_community_bringing_opportunities.webp">
+            </div>
         </div>
 
-        <div class="TimelineFrame">
-            <div></div>
-            <div></div>
-            <div class="TimelineNode">
-                <img src='assets/TimelineNode.png' class="TimelineNodeDot">
+        <div class="TimelineMobile">
+            <div class="TimelineFrameMobile">
+                <div class="TimelineHeader left">2015</div>
+                <img class="TimelineImage" src="./assets/a_community_bringing_opportunities.webp">
+                <div class="TimelineContent center">UPStars was founded as a joint initiative between Ulu Pandan PAP Community Foundation (PCF) and Ulu Pandan Citizen Consultative Committee’s (CCC) – Community Development & Welfare Fund Subcommittee (CDWF)</div>
             </div>
-            <div>
+            <div class="TimelineFrameMobile">
                 <div class="TimelineHeader left">2016</div>
-                <div class="TimelineContent left">UPStars was founded as a joint initiative between Ulu Pandan PAP Community Foundation (PCF) and Ulu Pandan Citizen Consultative Committee’s (CCC) – Community Development & Welfare Fund Subcommittee (CDWF)</div>
+                <img class="TimelineImage" src="./assets/a_community_bringing_opportunities.webp">
+                <div class="TimelineContent center">UPStars was founded as a joint initiative between Ulu Pandan PAP Community Foundation (PCF) and Ulu Pandan Citizen Consultative Committee’s (CCC) – Community Development & Welfare Fund Subcommittee (CDWF)</div>
             </div>
-            <img class="TimelineImage" src="./assets/a_community_bringing_opportunities.webp">
-        </div>
-            
-        <div class="TimelineFrame">
-            <img class="TimelineImage" src="./assets/a_community_bringing_opportunities.webp">
-            <div>
-                <div class="TimelineHeader">2017</div>
-                <div class="TimelineContent">UPStars was founded as a joint initiative between Ulu Pandan PAP Community Foundation (PCF) and Ulu Pandan Citizen Consultative Committee’s (CCC) – Community Development & Welfare Fund Subcommittee (CDWF)</div>
+            <div class="TimelineFrameMobile">
+                <div class="TimelineHeader left">2017</div>
+                <img class="TimelineImage" src="./assets/a_community_bringing_opportunities.webp">
+                <div class="TimelineContent center">UPStars was founded as a joint initiative between Ulu Pandan PAP Community Foundation (PCF) and Ulu Pandan Citizen Consultative Committee’s (CCC) – Community Development & Welfare Fund Subcommittee (CDWF)</div>
             </div>
-            <div class="TimelineNode">
-                <img src='assets/TimelineNode.png' class="TimelineNodeDot">
-            </div>
-            <div></div>
-            <div></div>
-        </div>
-
-        <div class="TimelineFrame">
-            <div></div>
-            <div></div>
-            <div class="TimelineNode">
-                <img src='assets/TimelineNode.png' class="TimelineNodeDot">
-            </div>
-            <div>
+            <div class="TimelineFrameMobile">
                 <div class="TimelineHeader left">2018</div>
-                <div class="TimelineContent left">UPStars was founded as a joint initiative between Ulu Pandan PAP Community Foundation (PCF) and Ulu Pandan Citizen Consultative Committee’s (CCC) – Community Development & Welfare Fund Subcommittee (CDWF)</div>
+                <img class="TimelineImage" src="./assets/a_community_bringing_opportunities.webp">
+                <div class="TimelineContent center">UPStars was founded as a joint initiative between Ulu Pandan PAP Community Foundation (PCF) and Ulu Pandan Citizen Consultative Committee’s (CCC) – Community Development & Welfare Fund Subcommittee (CDWF)</div>
             </div>
-            <img class="TimelineImage" src="./assets/a_community_bringing_opportunities.webp">
         </div>
 
         <div class="ContentHeader" style="margin-top: 3rem; padding-top: 5rem; background-color: white;">Our Star Stories</div>
