--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="NavButton" onclick="location.href='./signup.html'">
                 Sign Up
             </div>
-            <div class="NavButton HamIcon" onclick="toggleHamburger()">三</div>
+            <div class="NavButton HamIcon" onclick="toggleHamburger()">≡</div>
         </div>
 
         <div class="HamburgerMenu">
