--- a/star_story.html
+++ b/star_story.html
@@ -32,7 +32,7 @@
             <div class="NavButton" onclick="location.href='./signup.html'">
                 Sign Up
             </div>
-            <div class="NavButton HamIcon" onclick="toggleHamburger()">三</div>
+            <div class="NavButton HamIcon" onclick="toggleHamburger()">≡</div>
         </div>
 
         <div class="HamburgerMenu">
